removing div prefix to fix package layout breakage

--- a/web/assets/scss/package.scss
+++ b/web/assets/scss/package.scss
@@ -1,4 +1,4 @@
-div.package {
+.package {
     padding: 50px 0;
     background-color: $white;
 
